# graph

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  RELEASING.md  cliff.toml  mise.toml
.cargo/: config.toml
.claude/skills/workbench-shots/: SKILL.md
.github/workflows/: ci.yaml  graph-checks.yaml  release.yaml
.graph/: config.toml
.graph/plans/: docs_drift.yaml  pr_review.yaml
.graph/tools/: findings_to_review_comments.yaml  pr_changed_files.yaml  pr_crate_diff.yaml  review_graph_pr.yaml
crates/graph-cli/: Cargo.toml  build.rs
crates/graph-cli/src/: cli.rs  main.rs  output.rs  runtime.rs
crates/graph-cli/src/commands/: ask.rs  chat_cmd.rs  config_cmd.rs  db_cmd.rs  input.rs  listing.rs  mcp_cmd.rs  mod.rs  plan_cmd.rs  shapes_cmd.rs  threads_cmd.rs  tools_cmd.rs
crates/graph-cli/src/workbench/: app.rs  chat.rs  editor.rs  effects.rs  fs_tools.rs  mod.rs  plan_ws.rs  runner.rs  screenshot.rs  shots.rs  tools.rs  ui.rs
crates/graph-config/: Cargo.toml
crates/graph-config/src/: lib.rs  load.rs  model.rs
crates/graph-core/: Cargo.toml
crates/graph-core/src/: lib.rs  shapes.rs  store.rs  toolbox.rs  tools.rs  user_tools.rs  user_tools_tests.rs
crates/graph-core/src/agent/: events.rs  mod.rs
crates/graph-core/src/packs/data/: reshape.yaml
crates/graph-core/src/packs/github/: gh_pr_comment.yaml  gh_pr_inline_comments.yaml  gh_pr_meta.yaml  gh_pr_ticket.yaml  git_changed_files.yaml  git_diff.yaml  git_file.yaml  git_grep.yaml
crates/graph-core/src/packs/llm/: infer.yaml
crates/graph-core/src/pipeline/: body.rs  catalog.rs  condition.rs  decision.rs  doc.rs  exit.rs  gate.rs  iterate.rs  mod.rs  outline.rs  plan.rs  prompts.rs  state.rs  tests.rs
crates/graph-core/src/prompts/: chat.rs  mod.rs
crates/graph-core/src/template/: mod.rs  parser.rs  render.rs
crates/graph-llm/: Cargo.toml
crates/graph-llm/src/: error.rs  failover.rs  lib.rs  provider.rs  retry.rs  roles.rs  structured.rs  types.rs
crates/graph-llm/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
crates/graph-mcp/: Cargo.toml
crates/graph-mcp/src/: lib.rs  manager.rs
crates/graph-mcp/tests/: live_everything.rs
crates/graph-store/: Cargo.toml  SPIKE.md  build.rs
crates/graph-store/src/: db.rs  extensions.rs  file.rs  lib.rs  memory.rs  recording.rs
crates/graph-store/tests/: file_store.rs  ladybug_spike.rs  store_roundtrip.rs
docs/: docs.json
docs/architecture/: execution-model.mdx  storage.mdx
docs/automation/: ci.mdx  scripting.mdx
docs/cookbook/: automation.mdx  bot-identity.mdx  ci-checks.mdx  reporting.mdx
docs/getting-started/: concepts.mdx  installation.mdx  introduction.mdx  quickstart.mdx
docs/models/: models-and-providers.mdx
docs/plans/: authoring.mdx  branching.mdx  ci-cookbook.mdx  cookbook.mdx  errors-and-replanning.mdx  escape-hatch.mdx  exit-gates.mdx  finish-modes.mdx  inputs.mdx  iteration.mdx  overview.mdx  template-language.mdx  the-planner.mdx
docs/reference/: cli.mdx  configuration.mdx  environment.mdx  plan-schema.mdx  scripting-contract.mdx
docs/shared/: binary_downloads.mdx  workbench_shot.mdx
docs/shots/: README.md  branching-decide.yaml  context-tab.yaml  drafting-overlay.yaml  exit-gate.yaml  hero.yaml  iteration-map.yaml  pr-review-debug.yaml  run-tab.yaml  workbench-overview.yaml
docs/shots/plans/: change_summary.yaml  file_survey.yaml  nightly_diff_report.yaml  pr_followup.yaml  weekly_status.yaml
docs/tools/: builtins.mdx  mcp-servers.mdx  overview.mdx  shape-cache.mdx  user-defined.mdx
docs/using/: chat-and-ask.mdx  plan-workbench.mdx  threads.mdx  tool-selection.mdx
docs/workbench/: plan-workbench.mdx
scripts/: release.sh  rustflags.sh  workbench_trace.html  workbench_trace.py
skills/graph-github-actions-setup/: SKILL.md
skills/graph-project-setup/: SKILL.md
