[package]
name = "graph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "graph"
path = "src/main.rs"

[dependencies]
graph-core.workspace = true
graph-llm.workspace = true
graph-mcp.workspace = true
graph-store.workspace = true
graph-config.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
reedline = "0.36"
chrono.workspace = true
serde_yaml.workspace = true
