[package]
name = "graph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "graph"
path = "src/main.rs"

[dependencies]
graph-core.workspace = true
graph-llm.workspace = true
graph-mcp.workspace = true
graph-store.workspace = true
graph-config.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
reedline = "0.36"
chrono.workspace = true
serde_yaml.workspace = true
async-trait.workspace = true
futures.workspace = true
# TUI stack for `graph workbench` — crossterm pinned to reedline's 0.28 so
# the lockfile carries exactly one copy.
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"

[dev-dependencies]
tempfile = "3"
