[package]
name = "graph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "graph"
path = "src/main.rs"

[dependencies]
graph-core.workspace = true
graph-llm.workspace = true
graph-mcp.workspace = true
graph-store.workspace = true
graph-config.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
reedline = "0.36"
chrono.workspace = true
serde_yaml.workspace = true
async-trait.workspace = true
futures.workspace = true
# TUI stack for `graph workbench` — crossterm pinned to reedline's 0.28 so
# the lockfile carries exactly one copy.
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
# Workbench filesystem research tools (read_file / grep / glob).
ignore = "0.4"
globset = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"
