[package]
name = "graph-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
graph-llm.workspace = true
graph-config.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
schemars.workspace = true
jsonschema.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
