[package]
name = "graph-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
graph-config.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
reqwest.workspace = true
schemars.workspace = true
tracing.workspace = true
