[package]
name = "graph-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
graph-core.workspace = true
graph-config.workspace = true
graph-llm.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
lbug = "0.18"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
# Fetches the lbug extension binaries embedded into the crate (build.rs);
# rustls TLS, so no system OpenSSL is needed at build-script time.
ureq = "2"
